kitten/reported_bugs/rust/rust-86053/stderr.txt
error: unexpected `self` parameter in function

 --> mutant.rs:1:49

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                 ^^^^^^ must be the first parameter of an associated function



error: unexpected `self` parameter in function

 --> mutant.rs:1:58

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                          ^^^^ must be the first parameter of an associated function



error: unexpected `self` parameter in function

 --> mutant.rs:1:65

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                                 ^^^^^^ must be the first parameter of an associated function



error: unexpected `self` parameter in function

 --> mutant.rs:1:74

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                                          ^^^^^^ must be the first parameter of an associated function



error: unexpected `self` parameter in function

 --> mutant.rs:1:89

  |

1 | ...elf , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a & 'b usize ) {

  |                                         ^^^^^^ must be the first parameter of an associated function



error: unexpected `self` parameter in function

 --> mutant.rs:1:98

  |

1 | ...f , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a & 'b usize ) {

  |                                         ^^^^^^ must be the first parameter of an associated function



error: `...` must be the last argument of a C-variadic function

 --> mutant.rs:1:83

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                                                   ^^^^



error: only foreign or `unsafe extern "C" functions may be C-variadic

 --> mutant.rs:1:83

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                                                   ^^^^



error: only foreign or `unsafe extern "C" functions may be C-variadic

 --> mutant.rs:1:107

  |

1 | fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

  |                                                                                                           ^^^^



error[E0658]: C-variadic functions are unstable

 --> mutant.rs:1:1

  |

1 | / fn ordering4 < 'a , 'b , F > ( a : & 'a usize , & self , self , & self , & self , ... , & self , & self , ... ) where F : FnOnce ( & 'a &...

2 | | let z : Option < & 'a & 'b usize > = None ;

3 | | }

  | |_^

  |

  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information

  = help: add `#![feature(c_variadic)]` to the crate attributes to enable



thread 'rustc' panicked at 'index out of bounds: the len is 8 but the index is 8', compiler/rustc_infer/src/infer/error_reporting/nice_region_error/util.rs:61:22

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (dbe459ded 2021-06-02) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_item_well_formed] checking that `ordering4` is well-formed

#1 [analysis] running analysis passes on this crate

end of query stack

error: aborting due to 10 previous errors



For more information about this error, try `rustc --explain E0658`.

